@@ -524,21 +524,60 @@ let emit_instr fallthrough i =
     | Lop(Iintop_imm(Iadd, -1) | Iintop_imm(Isub, 1)) ->
         `	decq	{emit_reg i.res.(0)}\n`
     | Lop(Iintop_imm(Idiv, n)) ->
-        (* Note: i.arg.(0) = i.res.(0) = rdx  (cf. selection.ml) *)
+        (* Note: i.arg.(0) = i.res.(0) = rcx  (cf. selection.ml) *)
         let l = Misc.log2 n in
-        `	movq	{emit_reg i.arg.(0)}, %rax\n`;
-        `	addq	${emit_int(n-1)}, {emit_reg i.arg.(0)}\n`;
-        `	testq	%rax, %rax\n`;
-        `	cmovns	%rax, {emit_reg i.arg.(0)}\n`;
-        `	sarq	${emit_int l}, {emit_reg i.res.(0)}\n`
+        if n = 1 lsl l then begin
+          `	movq	{emit_reg i.arg.(0)}, %rax\n`;
+          `	addq	${emit_int(n-1)}, {emit_reg i.arg.(0)}\n`;
+          `	testq	%rax, %rax\n`;
+          `	cmovns	%rax, {emit_reg i.arg.(0)}\n`;
+          `	sarq	${emit_int l}, {emit_reg i.res.(0)}\n`
+        end else begin
+          let (m, p) = Selectgen.divimm_parameters (Nativeint.of_int n) in
+          (* Algorithm:
+                t = multiply-high-signed(arg, m)
+                if m < 0, t = t + m
+                t = shift-right-signed(t, p)
+                res = t + sign-bit(arg) 
+          *)
+          `	movabsq	${emit_nativeint m}, %rdx\n`;
+          `	movq	%rcx, %rax\n`;
+          `	imulq	%rdx\n`; (* rdx = high 64 bits of arg * m, signed *)
+          if m < 0n then
+            `	addq	%rcx, %rdx\n`;
+          if p > 0 then
+            `	sarq	${emit_int p}, %rdx\n`;
+          `	shrq	$63, %rcx\n`;
+          `	addq	%rdx, %rcx\n`
+        end
     | Lop(Iintop_imm(Imod, n)) ->
-        (* Note: i.arg.(0) = i.res.(0) = rdx  (cf. selection.ml) *)
-        `	movq	{emit_reg i.arg.(0)}, %rax\n`;
-        `	testq	%rax, %rax\n`;
-        `	leaq	{emit_int(n-1)}(%rax), %rax\n`;
-        `	cmovns	{emit_reg i.arg.(0)}, %rax\n`;
-        `	andq	${emit_int (-n)}, %rax\n`;
-        `	subq	%rax, {emit_reg i.res.(0)}\n`
+        (* Note: i.arg.(0) = i.res.(0) = rcx  (cf. selection.ml) *)
+        let l = Misc.log2 n in
+        if n = 1 lsl l then begin
+          `	movq	{emit_reg i.arg.(0)}, %rax\n`;
+          `	testq	%rax, %rax\n`;
+          `	leaq	{emit_int(n-1)}(%rax), %rax\n`; (* flags preserved *)
+          `	cmovns	{emit_reg i.arg.(0)}, %rax\n`;
+          `	andq	${emit_int (-n)}, %rax\n`;
+          `	subq	%rax, {emit_reg i.res.(0)}\n`
+        end else begin
+          let (m, p) = Selectgen.divimm_parameters (Nativeint.of_int n) in
+          (* Compute quotient as in the Idiv immediate case, but
+             compute it in rdx, preserving rcx *)
+          `	movabsq	${emit_nativeint m}, %rdx\n`;
+          `	movq	%rcx, %rax\n`;
+          `	imulq	%rdx\n`;
+          if m < 0n then
+            `	addq	%rcx, %rdx\n`;
+          if p > 0 then
+            `	sarq	${emit_int p}, %rdx\n`;
+          `	movq	%rcx, %rax\n`;
+          `	shrq	$63, %rax\n`;
+          `	addq	%rax, %rdx\n`;
+          (* Compute remainder via Euclid's equality *)
+          `	imulq	${emit_int n}, %rdx\n`;
+          `	subq	%rdx, %rcx\n`
+        end
     | Lop(Iintop_imm(op, n)) ->
         (* We have i.arg.(0) = i.res.(0) *)
         `	{emit_string(instr_for_intop op)}	${emit_int n}, {emit_reg i.res.(0)}\n`
